--- a/toy-api/package.json
+++ b/toy-api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@phala/dstack-sdk": "^0.1.4",
+    "cors": "^2.8.5",
     "express": "^4.21.1"
   }
 }
